Added \me to AUTHORS
git-svn-id: http://svn.pugscode.org/pugs@13857 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -186,6 +186,7 @@ Trey Harris                      (TREY)
 Uri Guttman                      (URI)
 Vadim Konovalov                  (VKON)
 Will Coleda                      (COKE)
+Wim "andara" Vanderbauwhede	(WVDB)
 Yiyi "xinming" Hu                            鹄驿懿
 Yuan-Chen "ycheng" Cheng                     鄭原真
 Yung-Chung Lin                   (XERN)      林永忠
