--- a/doc/trunk/design/syn/S12.pod
+++ b/doc/trunk/design/syn/S12.pod
@@ -14,7 +14,7 @@ Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
   Last Modified: 20 Sept 2006
   Number: 12
-  Version: 27
+  Version: 28
 
 =head1 Overview
 
@@ -196,18 +196,24 @@ use either the dot notation or indirect object notation:
 Indirect object notation now requires a colon after the invocant if
 there are any arguments.  If there are no arguments and you omit the
 colon, the notation is parsed either as a named unary operator or a
-list operator with one argument.  In any case, all of these come out
-to the same thing:
+list operator with one argument.
+
+These two are considered method calls, which will fall back to a
+subroutine call if the method was not found:
 
     $handle.close
-    close($handle)
     close $handle:
+
+To reject method call and only consider subs, simply omit the colon
+from the invocation line:
+
+    close($handle)
     close $handle
 
-To explicitly reject method call and only consider subs, put a
-trailing comma after the single positional argument:
-
-    close($handle,)
+However, here the built-in B<IO> class defines C<method close is export ()>,
+which puts a C<multi sub close (IO)> in scope by default.  Thus if the
+C<$handle> evaluates to an IO object, then the two subroutine calls above
+are still translated into method calls.
 
 Dot notation can omit the invocant if it's in C<$_>:
 
