In t/ (mostly), converted eval_ok and eval_is to ok(eval and is(eval. The majority were incorrectly assuming lexical and package context were shared. Some knowingly depended on this, and will need to be changed "back" (but hopefully to either local helper code, or something with a less confusion creating name).
The quality of position information in error messages about the eval()ed string is reduced.  But without a good macro implementation available on all p6 implementations, this does not currently seem avoidable.

eval_dies_ok use was not touched, as it was being used correctly, and it would require a (very) slightly less trivial fix.

TreyHarris++ did a lot of related work.

eval_ok and eval_is are now gone from:
  t/ test files with the exception of t/02-test-pm/1-basic.t
  t/REAMDE
  ext/Set/t/overload.t


git-svn-id: http://svn.pugscode.org/pugs@13913 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/t/README
+++ b/t/README
@@ -118,7 +118,7 @@ When developing tests for features that have not been implemented yet,
 often you find yourself writing code that doesn't compile. Don't get
 stuck on this: wrap the new code with eval and test it anyway. Just make
 sure that the test fails as long as the eval does, and until the feature
-has been implemented correctly. You can use the eval_* functions for this.
+has been implemented correctly.
 
 Sometimes code is so futuristic, it can even confuse eval. We call this a
 "hard parsefail". When this happens, comment out the failing code, but mark
@@ -126,23 +126,23 @@ it so it doesn't get forgotten, like so:
 
     todo :pugs<6.28.0>, v6_pm<0.110>;
     flunk("FIXME parsefail");
-    #eval_ok('my code here');
+    #ok eval('my code here');
     
 Or another alternate style is as follows:
 
-    eval_ok('# $code.which(%will, @fail)');
+    ok eval('# $code.which(%will, @fail)');
 
-    eval_ok q{
+    ok eval(q{
 	blah blah blah
-    };
+    });
 
-    eval_is q{
+    is(eval(q{
 	my $val;
 	# some code here...
 	$val;
-    }, $expected, 'description';
+    }), $expected, 'description');
 
-which essentially comments out your eval, and returns 'undef' to eval_ok().
+which essentially comments out your eval, and returns 'undef' to ok().
 
 - When TODO and when not TODO.
 
