Test - removed eval_ok and eval_is. Unlike eval(), they were not sharing lexical and package context, causing confusion and bogus tests.  Macro implementation immaturity currently prevents this from being fixed. Tests depending upon the old behavior should use local helper functions instead.  This will avoid everyone using one lexical environment in package Test. Error report quality is reduced, but can recover when eval() starts returning "undef but informative". TreyHarris++
git-svn-id: http://svn.pugscode.org/pugs@13957 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@
 # Limbic_Region ends on 10930
 ######################################################
 
-= Changes for 6.2.13 (rXXXXX) - September XX, 2006
+= Changes for 6.2.13 (rXXXXX) - October XX, 2006
 
 # Agent Zhang has reviewed r12962 ~ r13261
 # (and possibly some more, but not including fglock's work)
@@ -39,6 +39,7 @@
 * [ext/Rosetta/] - Significant updates to lib/Rosetta/SeeAlso.pod.
 * [ext/Set-Relation/] - Renamed from ext/Relation/ .
 ** Started to rewrite with separate [Set::Tuple, Set::Relation] classes.
+* [ext/Test/] - Removed eval_ok and eval_is which were confusing people.
 
 == Perl 6 on Perl 5 (under [misc/pX/Common/])
 
