bleah, typo from ENOCAFFEINE
git-svn-id: http://svn.pugscode.org/pugs@23603 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1599,7 +1599,7 @@ while
 
     q:n[stuff]
 
-also happens to work because quote adverbs only all the paren form of
+also happens to work because quote adverbs only allow the paren form of
 bracketed adverbs.
 
 If this is all too much of a hardship, you can define your own quote
