typo from wolverian++
git-svn-id: http://svn.pugscode.org/pugs@23608 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -786,7 +786,7 @@ the last element of the list were arbitrarily replicated C<*> times.  But
 this happens only on the "dwimmy" side.
 
 When using a unary operator, you always aim the blunt end at the
-single operand, because no dwimmery every happens:
+single operand, because no dwimmery ever happens:
 
      @negatives = -« @positives;
 
